add some animations

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- <div class="banner-container"> -->
                     <h2 class="banner-description">
             Dresses<span class="banner-span">&#38;</span>jeans
-            <span class="banner-description-bold">from our famous brands <span class="banner-span">sale</span></span>
+            <span class="banner-description-bold">from our famous brands <span class="banner-span pulse">sale</span></span>
           </h2>
 
               <a class="active-btn" href="#">Buy now
